// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emitter packed boolean padding packed booleans write one computed byte per group instead of per-bit packBit calls 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(1);
buffer.writeu8(buf1, pos2, (value.a ? 1 : 0) + (value.b ? 2 : 0) + (value.c ? 4 : 0));

// read
const [buf3, pos4] = __surge_readAlloc(1);
return {
    a: __surge_unpackBit(buf3, pos4, 0),
    b: __surge_unpackBit(buf3, pos4, 1),
    c: __surge_unpackBit(buf3, pos4, 2)
};"
`;

exports[`Emitter packed region a packed optional is a presence bit at the head of its object, with no flag byte 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(1);
buffer.writeu8(buf1, pos2, (value.count !== undefined ? 1 : 0) + (value.flag ? 2 : 0) + (value.maybeFlag !== undefined ? 4 : 0) + (value.maybeFlag === true ? 8 : 0));
const opt3 = value.count;
if (opt3 !== undefined) {
    const [buf4, pos5] = __surge_alloc(1);
    buffer.writeu8(buf4, pos5, opt3);
}
const s6 = value.label;
const [buf7, pos8] = __surge_alloc(4);
buffer.writeu32(buf7, pos8, s6.size());
const [buf9, pos10] = __surge_alloc(s6.size());
buffer.writestring(buf9, pos10, s6);

// read
const [buf11, pos12] = __surge_readAlloc(1);
let opt13;
if (__surge_unpackBit(buf11, pos12, 0)) {
    const [buf14, pos15] = __surge_readAlloc(1);
    opt13 = buffer.readu8(buf14, pos15);
}
const [buf16, pos17] = __surge_readAlloc(4);
const len18 = buffer.readu32(buf16, pos17);
const [buf19, pos20] = __surge_readAlloc(len18);
return {
    count: opt13,
    flag: __surge_unpackBit(buf11, pos12, 1),
    label: buffer.readstring(buf19, pos20, len18),
    maybeFlag: __surge_unpackBit(buf11, pos12, 2) ? __surge_unpackBit(buf11, pos12, 3) : undefined
};"
`;

exports[`Emitter per-kind write/read snapshots array 1`] = `
"// write
const arr1 = value;
const [buf2, pos3] = __surge_alloc(4);
buffer.writeu32(buf2, pos3, arr1.size());
for (const item4 of arr1) {
    const [buf5, pos6] = __surge_alloc(8);
    buffer.writef64(buf5, pos6, item4);
}

// read
const [buf7, pos8] = __surge_readAlloc(4);
const count9 = buffer.readu32(buf7, pos8);
const result10 = [];
for (let i11 = 0; i11 < count9; i11++) {
    const [buf12, pos13] = __surge_readAlloc(8);
    result10.push(buffer.readf64(buf12, pos13));
}
return result10;"
`;

exports[`Emitter per-kind write/read snapshots blob 1`] = `
"// write
__surge_pushBlob(value as unknown as defined);

// read
const val1 = __surge_nextBlob();
return val1;"
`;

exports[`Emitter per-kind write/read snapshots bool 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(1);
buffer.writeu8(buf1, pos2, value ? 1 : 0);

// read
const [buf3, pos4] = __surge_readAlloc(1);
return buffer.readu8(buf3, pos4) !== 0;"
`;

exports[`Emitter per-kind write/read snapshots buffer 1`] = `
"// write
const src1 = value;
const len2 = buffer.len(src1);
const [buf3, pos4] = __surge_alloc(4);
buffer.writeu32(buf3, pos4, len2);
const [buf5, pos6] = __surge_alloc(len2);
buffer.copy(buf5, pos6, src1, 0, len2);

// read
const [buf7, pos8] = __surge_readAlloc(4);
const len9 = buffer.readu32(buf7, pos8);
const [buf10, pos11] = __surge_readAlloc(len9);
const bytes12 = buffer.create(len9);
buffer.copy(bytes12, 0, buf10, pos11, len9);
return bytes12;"
`;

exports[`Emitter per-kind write/read snapshots cframe 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(12);
buffer.writef32(buf1, pos2, value.Position.X);
buffer.writef32(buf1, pos2 + 4, value.Position.Y);
buffer.writef32(buf1, pos2 + 8, value.Position.Z);
const [axis3, angle4] = value.ToAxisAngle();
const rv5 = axis3.mul(angle4);
const [buf6, pos7] = __surge_alloc(12);
buffer.writef32(buf6, pos7, rv5.X);
buffer.writef32(buf6, pos7 + 4, rv5.Y);
buffer.writef32(buf6, pos7 + 8, rv5.Z);

// read
const [buf8, pos9] = __surge_readAlloc(12);
const pos10 = new Vector3(buffer.readf32(buf8, pos9), buffer.readf32(buf8, pos9 + 4), buffer.readf32(buf8, pos9 + 8));
const [buf11, pos12] = __surge_readAlloc(12);
const rv13 = new Vector3(buffer.readf32(buf11, pos12), buffer.readf32(buf11, pos12 + 4), buffer.readf32(buf11, pos12 + 8));
const angle14 = rv13.Magnitude;
const rotation15 = CFrame.fromAxisAngle(angle14 > 1e-6 ? rv13.Unit : Vector3.zAxis, angle14);
return rotation15.add(pos10);"
`;

exports[`Emitter per-kind write/read snapshots color3 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(3);
buffer.writeu8(buf1, pos2, math.floor(value.R * 255));
buffer.writeu8(buf1, pos2 + 1, math.floor(value.G * 255));
buffer.writeu8(buf1, pos2 + 2, math.floor(value.B * 255));

// read
const [buf3, pos4] = __surge_readAlloc(3);
return new Color3(buffer.readu8(buf3, pos4) / 255, buffer.readu8(buf3, pos4 + 1) / 255, buffer.readu8(buf3, pos4 + 2) / 255);"
`;

exports[`Emitter per-kind write/read snapshots colorSequence 1`] = `
"// write
const keypoints1 = value.Keypoints;
const [buf2, pos3] = __surge_alloc(1);
buffer.writeu8(buf2, pos3, keypoints1.size());
for (const kp4 of keypoints1) {
    const [buf5, pos6] = __surge_alloc(4);
    buffer.writef32(buf5, pos6, kp4.Time);
    const [buf7, pos8] = __surge_alloc(3);
    buffer.writeu8(buf7, pos8, math.floor(kp4.Value.R * 255));
    buffer.writeu8(buf7, pos8 + 1, math.floor(kp4.Value.G * 255));
    buffer.writeu8(buf7, pos8 + 2, math.floor(kp4.Value.B * 255));
}

// read
const [buf9, pos10] = __surge_readAlloc(1);
const count11 = buffer.readu8(buf9, pos10);
const keypoints12 = [];
for (let i13 = 0; i13 < count11; i13++) {
    const [buf14, pos15] = __surge_readAlloc(4);
    const time16 = buffer.readf32(buf14, pos15);
    const [buf17, pos18] = __surge_readAlloc(3);
    keypoints12.push(new ColorSequenceKeypoint(time16, new Color3(buffer.readu8(buf17, pos18) / 255, buffer.readu8(buf17, pos18 + 1) / 255, buffer.readu8(buf17, pos18 + 2) / 255)));
}
return new ColorSequence(keypoints12);"
`;

exports[`Emitter per-kind write/read snapshots datatype BrickColor 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(2);
buffer.writeu16(buf1, pos2, value.Number);

// read
const [buf3, pos4] = __surge_readAlloc(2);
return new BrickColor(buffer.readu16(buf3, pos4));"
`;

exports[`Emitter per-kind write/read snapshots datatype DateTime 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(8);
buffer.writef64(buf1, pos2, value.UnixTimestampMillis);

// read
const [buf3, pos4] = __surge_readAlloc(8);
return DateTime.fromUnixTimestampMillis(buffer.readf64(buf3, pos4));"
`;

exports[`Emitter per-kind write/read snapshots datatype NumberRange 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(8);
buffer.writef32(buf1, pos2, value.Min);
buffer.writef32(buf1, pos2 + 4, value.Max);

// read
const [buf3, pos4] = __surge_readAlloc(8);
return new NumberRange(buffer.readf32(buf3, pos4), buffer.readf32(buf3, pos4 + 4));"
`;

exports[`Emitter per-kind write/read snapshots datatype Rect 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(16);
buffer.writef32(buf1, pos2, value.Min.X);
buffer.writef32(buf1, pos2 + 4, value.Min.Y);
buffer.writef32(buf1, pos2 + 8, value.Max.X);
buffer.writef32(buf1, pos2 + 12, value.Max.Y);

// read
const [buf3, pos4] = __surge_readAlloc(16);
return new Rect(buffer.readf32(buf3, pos4), buffer.readf32(buf3, pos4 + 4), buffer.readf32(buf3, pos4 + 8), buffer.readf32(buf3, pos4 + 12));"
`;

exports[`Emitter per-kind write/read snapshots datatype UDim 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(8);
buffer.writef32(buf1, pos2, value.Scale);
buffer.writei32(buf1, pos2 + 4, value.Offset);

// read
const [buf3, pos4] = __surge_readAlloc(8);
return new UDim(buffer.readf32(buf3, pos4), buffer.readi32(buf3, pos4 + 4));"
`;

exports[`Emitter per-kind write/read snapshots datatype UDim2 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(16);
buffer.writef32(buf1, pos2, value.X.Scale);
buffer.writei32(buf1, pos2 + 4, value.X.Offset);
buffer.writef32(buf1, pos2 + 8, value.Y.Scale);
buffer.writei32(buf1, pos2 + 12, value.Y.Offset);

// read
const [buf3, pos4] = __surge_readAlloc(16);
return new UDim2(buffer.readf32(buf3, pos4), buffer.readi32(buf3, pos4 + 4), buffer.readf32(buf3, pos4 + 8), buffer.readi32(buf3, pos4 + 12));"
`;

exports[`Emitter per-kind write/read snapshots datatype Vector3int16 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(6);
buffer.writei16(buf1, pos2, value.X);
buffer.writei16(buf1, pos2 + 2, value.Y);
buffer.writei16(buf1, pos2 + 4, value.Z);

// read
const [buf3, pos4] = __surge_readAlloc(6);
return new Vector3int16(buffer.readi16(buf3, pos4), buffer.readi16(buf3, pos4 + 2), buffer.readi16(buf3, pos4 + 4));"
`;

exports[`Emitter per-kind write/read snapshots dict (map) 1`] = `
"// write
const dict1 = value;
const [buf2, pos3] = __surge_alloc(4);
let count4 = 0;
for (const [k5, v11] of dict1 as unknown as Map<string, number>) {
    const s6 = k5;
    const [buf7, pos8] = __surge_alloc(4);
    buffer.writeu32(buf7, pos8, s6.size());
    const [buf9, pos10] = __surge_alloc(s6.size());
    buffer.writestring(buf9, pos10, s6);
    const [buf12, pos13] = __surge_alloc(8);
    buffer.writef64(buf12, pos13, v11);
    count4++;
}
__surge_backpatchU32(pos3, count4);

// read
const [buf14, pos15] = __surge_readAlloc(4);
const count16 = buffer.readu32(buf14, pos15);
const result17: Record<string, number> = {};
for (let i18 = 0; i18 < count16; i18++) {
    const [buf19, pos20] = __surge_readAlloc(4);
    const len21 = buffer.readu32(buf19, pos20);
    const [buf22, pos23] = __surge_readAlloc(len21);
    const [buf24, pos25] = __surge_readAlloc(8);
    result17[buffer.readstring(buf22, pos23, len21)] = buffer.readf64(buf24, pos25);
}
return result17 as unknown as Map<string, number>;"
`;

exports[`Emitter per-kind write/read snapshots dict (set, no value) 1`] = `
"// write
const dict1 = value;
const [buf2, pos3] = __surge_alloc(4);
let count4 = 0;
for (const k5 of dict1 as unknown as Set<string>) {
    const s6 = k5;
    const [buf7, pos8] = __surge_alloc(4);
    buffer.writeu32(buf7, pos8, s6.size());
    const [buf9, pos10] = __surge_alloc(s6.size());
    buffer.writestring(buf9, pos10, s6);
    count4++;
}
__surge_backpatchU32(pos3, count4);

// read
const [buf11, pos12] = __surge_readAlloc(4);
const count13 = buffer.readu32(buf11, pos12);
const result14: Record<string, boolean> = {};
for (let i15 = 0; i15 < count13; i15++) {
    const [buf16, pos17] = __surge_readAlloc(4);
    const len18 = buffer.readu32(buf16, pos17);
    const [buf19, pos20] = __surge_readAlloc(len18);
    result14[buffer.readstring(buf19, pos20, len18)] = true;
}
return result14 as unknown as Set<string>;"
`;

exports[`Emitter per-kind write/read snapshots enum 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(1);
buffer.writeu8(buf1, pos2, surge_SortOrder_1_index.get(value.Name)!);

// read
const [buf3, pos4] = __surge_readAlloc(1);
const idx5 = buffer.readu8(buf3, pos4);
return surge_SortOrder_1_items[idx5];

// helpers
const surge_SortOrder_1_items = [Enum.SortOrder.Custom, Enum.SortOrder.LayoutOrder, Enum.SortOrder.Name];
const surge_SortOrder_1_index = new Map([["Custom", 0], ["LayoutOrder", 1], ["Name", 2]]);"
`;

exports[`Emitter per-kind write/read snapshots guardedUnion 1`] = `
"// write
const idx1 = typeIs(value, "number") ? 0 : 1;
const [buf2, pos3] = __surge_alloc(1);
buffer.writeu8(buf2, pos3, idx1);
if (idx1 === 0) {
    const [buf9, pos10] = __surge_alloc(8);
    buffer.writef64(buf9, pos10, value as unknown as number);
}
else if (idx1 === 1) {
    const s4 = value as unknown as string;
    const [buf5, pos6] = __surge_alloc(4);
    buffer.writeu32(buf5, pos6, s4.size());
    const [buf7, pos8] = __surge_alloc(s4.size());
    buffer.writestring(buf7, pos8, s4);
}

// read
const [buf11, pos12] = __surge_readAlloc(1);
const idx13 = buffer.readu8(buf11, pos12);
let result14: number | string;
if (idx13 === 1) {
    const [buf17, pos18] = __surge_readAlloc(4);
    const len19 = buffer.readu32(buf17, pos18);
    const [buf20, pos21] = __surge_readAlloc(len19);
    result14 = buffer.readstring(buf20, pos21, len19);
}
else {
    const [buf15, pos16] = __surge_readAlloc(8);
    result14 = buffer.readf64(buf15, pos16);
}
return result14;"
`;

exports[`Emitter per-kind write/read snapshots literal 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(1);
buffer.writeu8(buf1, pos2, value === "a" ? 0 : value === "b" ? 1 : 2);

// read
const [buf3, pos4] = __surge_readAlloc(1);
const idx5 = buffer.readu8(buf3, pos4);
return idx5 === 0 ? "a" : idx5 === 1 ? "b" : "c";"
`;

exports[`Emitter per-kind write/read snapshots literalConst 1`] = `
"// write


// read
return "fixed";"
`;

exports[`Emitter per-kind write/read snapshots num 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(4);
buffer.writef32(buf1, pos2, value);

// read
const [buf3, pos4] = __surge_readAlloc(4);
return buffer.readf32(buf3, pos4);"
`;

exports[`Emitter per-kind write/read snapshots num i24 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(3);
buffer.writeu16(buf1, pos2, value & 65535);
buffer.writeu8(buf1, pos2 + 2, (value >>> 16) & 255);

// read
const [buf3, pos4] = __surge_readAlloc(3);
return ((buffer.readu16(buf3, pos4) + buffer.readu8(buf3, pos4 + 2) * 65536) ^ 8388608) - 8388608;"
`;

exports[`Emitter per-kind write/read snapshots num u24 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(3);
buffer.writeu16(buf1, pos2, value & 65535);
buffer.writeu8(buf1, pos2 + 2, (value >>> 16) & 255);

// read
const [buf3, pos4] = __surge_readAlloc(3);
return buffer.readu16(buf3, pos4) + buffer.readu8(buf3, pos4 + 2) * 65536;"
`;

exports[`Emitter per-kind write/read snapshots numberSequence 1`] = `
"// write
const keypoints1 = value.Keypoints;
const [buf2, pos3] = __surge_alloc(1);
buffer.writeu8(buf2, pos3, keypoints1.size());
for (const kp4 of keypoints1) {
    const [buf5, pos6] = __surge_alloc(4);
    buffer.writef32(buf5, pos6, kp4.Time);
    const [buf7, pos8] = __surge_alloc(8);
    buffer.writef32(buf7, pos8, kp4.Value);
    buffer.writef32(buf7, pos8 + 4, kp4.Envelope);
}

// read
const [buf9, pos10] = __surge_readAlloc(1);
const count11 = buffer.readu8(buf9, pos10);
const keypoints12 = [];
for (let i13 = 0; i13 < count11; i13++) {
    const [buf14, pos15] = __surge_readAlloc(4);
    const time16 = buffer.readf32(buf14, pos15);
    const [buf17, pos18] = __surge_readAlloc(8);
    keypoints12.push(new NumberSequenceKeypoint(time16, buffer.readf32(buf17, pos18), buffer.readf32(buf17, pos18 + 4)));
}
return new NumberSequence(keypoints12);"
`;

exports[`Emitter per-kind write/read snapshots object 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(8);
buffer.writef64(buf1, pos2, value.a);
const s3 = value.b;
const [buf4, pos5] = __surge_alloc(4);
buffer.writeu32(buf4, pos5, s3.size());
const [buf6, pos7] = __surge_alloc(s3.size());
buffer.writestring(buf6, pos7, s3);

// read
const [buf8, pos9] = __surge_readAlloc(8);
const [buf10, pos11] = __surge_readAlloc(4);
const len12 = buffer.readu32(buf10, pos11);
const [buf13, pos14] = __surge_readAlloc(len12);
return {
    a: buffer.readf64(buf8, pos9),
    b: buffer.readstring(buf13, pos14, len12)
};"
`;

exports[`Emitter per-kind write/read snapshots optional 1`] = `
"// write
const opt1 = value;
const [buf2, pos3] = __surge_alloc(1);
buffer.writeu8(buf2, pos3, opt1 !== undefined ? 1 : 0);
if (opt1 !== undefined) {
    const [buf4, pos5] = __surge_alloc(8);
    buffer.writef64(buf4, pos5, opt1);
}

// read
const [buf6, pos7] = __surge_readAlloc(1);
const present8 = buffer.readu8(buf6, pos7) !== 0;
let opt9;
if (present8) {
    const [buf10, pos11] = __surge_readAlloc(8);
    opt9 = buffer.readf64(buf10, pos11);
}
return opt9;"
`;

exports[`Emitter per-kind write/read snapshots recursiveRef 1`] = `
"// write
surge_Node_1_write(value);

// read
const val6 = surge_Node_1_read();
return val6;

// helpers
type surge_Node_1_Type = {
    value: number;
    next: surge_Node_1_Type;
};
function surge_Node_1_write(value: surge_Node_1_Type) {
    const [buf1, pos2] = __surge_alloc(8);
    buffer.writef64(buf1, pos2, value.value);
    surge_Node_1_write(value.next);
}
function surge_Node_1_read(): surge_Node_1_Type {
    const [buf3, pos4] = __surge_readAlloc(8);
    const val5 = surge_Node_1_read();
    return {
        value: buffer.readf64(buf3, pos4),
        next: val5
    };
}"
`;

exports[`Emitter per-kind write/read snapshots str 1`] = `
"// write
const s1 = value;
const [buf2, pos3] = __surge_alloc(4);
buffer.writeu32(buf2, pos3, s1.size());
const [buf4, pos5] = __surge_alloc(s1.size());
buffer.writestring(buf4, pos5, s1);

// read
const [buf6, pos7] = __surge_readAlloc(4);
const len8 = buffer.readu32(buf6, pos7);
const [buf9, pos10] = __surge_readAlloc(len8);
return buffer.readstring(buf9, pos10, len8);"
`;

exports[`Emitter per-kind write/read snapshots taggedUnion 1`] = `
"// write
const idx1 = value.kind === "a" ? 0 : 1;
const [buf2, pos3] = __surge_alloc(1);
buffer.writeu8(buf2, pos3, idx1);
if (idx1 === 0) {
    const [buf9, pos10] = __surge_alloc(8);
    buffer.writef64(buf9, pos10, (value as unknown as {
        x: number;
    }).x);
}
else if (idx1 === 1) {
    const s4 = (value as unknown as {
        y: string;
    }).y;
    const [buf5, pos6] = __surge_alloc(4);
    buffer.writeu32(buf5, pos6, s4.size());
    const [buf7, pos8] = __surge_alloc(s4.size());
    buffer.writestring(buf7, pos8, s4);
}

// read
const [buf11, pos12] = __surge_readAlloc(1);
const idx13 = buffer.readu8(buf11, pos12);
let result14: {
    kind: "a";
    x: number;
} | {
    kind: "b";
    y: string;
};
if (idx13 === 1) {
    const [buf17, pos18] = __surge_readAlloc(4);
    const len19 = buffer.readu32(buf17, pos18);
    const [buf20, pos21] = __surge_readAlloc(len19);
    result14 = {
        ...{
            y: buffer.readstring(buf20, pos21, len19)
        },
        kind: "b"
    };
}
else {
    const [buf15, pos16] = __surge_readAlloc(8);
    result14 = {
        ...{
            x: buffer.readf64(buf15, pos16)
        },
        kind: "a"
    };
}
return result14;"
`;

exports[`Emitter per-kind write/read snapshots tuple with a rest element 1`] = `
"// write
const tup1 = value;
const s2 = tup1[0];
const [buf3, pos4] = __surge_alloc(4);
buffer.writeu32(buf3, pos4, s2.size());
const [buf5, pos6] = __surge_alloc(s2.size());
buffer.writestring(buf5, pos6, s2);
const [buf7, pos8] = __surge_alloc(4);
buffer.writeu32(buf7, pos8, tup1.size() - 1);
for (let i9 = 1; i9 < tup1.size(); i9++) {
    const [buf10, pos11] = __surge_alloc(8);
    buffer.writef64(buf10, pos11, tup1[i9] as unknown as number);
}

// read
const tup12 = [];
const [buf13, pos14] = __surge_readAlloc(4);
const len15 = buffer.readu32(buf13, pos14);
const [buf16, pos17] = __surge_readAlloc(len15);
tup12.push(buffer.readstring(buf16, pos17, len15));
const [buf18, pos19] = __surge_readAlloc(4);
const count20 = buffer.readu32(buf18, pos19);
for (let i21 = 0; i21 < count20; i21++) {
    const [buf22, pos23] = __surge_readAlloc(8);
    tup12.push(buffer.readf64(buf22, pos23));
}
return tup12 as unknown as [
    string,
    ...number[]
];"
`;

exports[`Emitter per-kind write/read snapshots vector2 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(8);
buffer.writef32(buf1, pos2, value.X);
buffer.writef32(buf1, pos2 + 4, value.Y);

// read
const [buf3, pos4] = __surge_readAlloc(8);
return new Vector2(buffer.readf32(buf3, pos4), buffer.readf32(buf3, pos4 + 4));"
`;

exports[`Emitter per-kind write/read snapshots vector3 1`] = `
"// write
const [buf1, pos2] = __surge_alloc(12);
buffer.writef32(buf1, pos2, value.X);
buffer.writef32(buf1, pos2 + 4, value.Y);
buffer.writef32(buf1, pos2 + 8, value.Z);

// read
const [buf3, pos4] = __surge_readAlloc(12);
return new Vector3(buffer.readf32(buf3, pos4), buffer.readf32(buf3, pos4 + 4), buffer.readf32(buf3, pos4 + 8));"
`;

exports[`Emitter read-order for side-effecting fields a blob field followed by a plain field binds the blob read before the next statement 1`] = `
"// write
__surge_pushBlob(value.a as unknown as defined);
const [buf1, pos2] = __surge_alloc(8);
buffer.writef64(buf1, pos2, value.b);

// read
const val3 = __surge_nextBlob();
const [buf4, pos5] = __surge_readAlloc(8);
return {
    a: val3,
    b: buffer.readf64(buf4, pos5)
};"
`;

exports[`Emitter read-order for side-effecting fields a helper-object field followed by a plain field binds the helper call before the next statement 1`] = `
"// write
surge_Tree_1_write(value.inner);
const [buf14, pos15] = __surge_alloc(8);
buffer.writef64(buf14, pos15, value.zebra);

// read
const val16 = surge_Tree_1_read();
const [buf17, pos18] = __surge_readAlloc(8);
return {
    inner: val16,
    zebra: buffer.readf64(buf17, pos18)
};

// helpers
type surge_Tree_1_Type = {
    kids: number[];
};
function surge_Tree_1_write(value: surge_Tree_1_Type) {
    const arr1 = value.kids;
    const [buf2, pos3] = __surge_alloc(4);
    buffer.writeu32(buf2, pos3, arr1.size());
    for (const item4 of arr1) {
        const [buf5, pos6] = __surge_alloc(8);
        buffer.writef64(buf5, pos6, item4);
    }
}
function surge_Tree_1_read(): surge_Tree_1_Type {
    const [buf7, pos8] = __surge_readAlloc(4);
    const count9 = buffer.readu32(buf7, pos8);
    const result10 = [];
    for (let i11 = 0; i11 < count9; i11++) {
        const [buf12, pos13] = __surge_readAlloc(8);
        result10.push(buffer.readf64(buf12, pos13));
    }
    return {
        kids: result10
    };
}"
`;
